# aibom-test-lb

./: .dockerignore  env.example  pyproject.toml  requirements.txt  sample_bedrock_app.py
.github/: CURSOR_VS_SNYK.md
.github/workflows/: ci.yml  cursor-security-review.yml
app/: __init__.py  main.py
infrastructure/: app.py
infrastructure/stacks/: __init__.py  bedrock_stack.py  compute_stack.py  monitoring_stack.py  network_stack.py  security_stack.py  storage_stack.py
mcp_server/: __init__.py  prompts.py  server.py
prompts/: __init__.py  agentic_prompts.py  chain_of_thought.py  evaluation_prompts.py  few_shot_examples.py  security_prompts.py  structured_output.py  system_prompts.py  tool_use_prompts.py
scripts/: deploy_bedrock_agent.py
security_review_samples/: README.txt  insecure_ssrf_rce_patterns.py
tests/: conftest.py  test_app.py  test_main.py
