[project]
name = "aibom-test"
version = "1.0.0"
description = "AI Bill of Materials testing project with AWS Bedrock integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.setuptools]
packages = ["app", "prompts", "mcp_server"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [".venv", "skills"]

[tool.ruff.lint]
# sample_bedrock_app: load_dotenv() then grouped demo imports (AIBOM catalog)
[tool.ruff.lint.per-file-ignores]
"sample_bedrock_app.py" = ["E402"]

# Align with Black so `isort` and `black` agree on wrapped imports.
[tool.isort]
profile = "black"
skip_glob = ["skills/**"]

# Third-party Cursor skills catalog — not formatted with project Black rules.
# target-version must match CI (GitHub Actions uses Python 3.11); otherwise a
# newer local Black may emit 3.12+ syntax and `black --check` fails on the runner.
[tool.black]
extend-exclude = "skills/"
target-version = ["py311"]
